fixed alignment on specific entry page for regular window size

--- a/client/src/components/pages/SpecificEntry.css
+++ b/client/src/components/pages/SpecificEntry.css
@@ -75,7 +75,7 @@
 
 .SpecificEntry-dateBox{
     position: absolute;
-    left: 50%;
+    right: 8%;
     width: 40%;
     height: auto;
     margin: 1vw 1vw;
@@ -143,7 +143,7 @@
 
 .SpecificEntry-entryBox{
     position: absolute;
-    top: 24%;
+    top: 28%;
 
     width: 40%;
 
